--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
     "manifest_version": 2 ,
     "name": "HighLighter",
+    "description": "This extension will highlight the statement where the cursor resides",
     "version": "0.1",
     "browser_action": {
       "default_icon": "download.png"
