--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
     "manifest_version": 2 ,
-    "name": "HighLighter",
+    "name": "HighLighter - Simple easy Highlighter",
     "description": "This extension will highlight the statement where the cursor resides",
-    "version": "0.1",
-    "browser_action": {
+    "version": "1.1",
+    "action": {
       "default_icon": "download.png"
     },
 
